--- a/about-us.html
+++ b/about-us.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/slick-theme.min.css">
     <link rel="stylesheet" href="css/slick.min.css">
     <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css?v=1.2">
     <link rel="stylesheet" href="css/responsive.css?v=1.2">
 </head>
@@ -23,13 +24,15 @@
     <section class="about-sec">
         <div class="container">
             <div class="row row-gap-4 align-items-center">
-                <div class="col-lg-6  text-lg-start text-center">
+                <div class="col-lg-6  text-lg-start text-center wow fadeInLeft">
                     <img src="./img/about/about2.jpg" alt="About us" class="img-fluid" />
                 </div>
                 <div class="col-lg-5 text-center text-lg-start">
-                    <h2 class="mb-3 mb-lg-5 about-title">“Traditional craftmanship and design are parts of the
+                    <h2 class="mb-3 mb-lg-5 about-title wow fadeInRight" data-wow-delay="100ms">“Traditional
+                        craftmanship and design are parts of the
                         deep-rooted cultural heritage of Morocco.”</h2>
-                    <p class="mb-0">Designed in Switzerland and made in Morocco, our rugs are a bridge between two
+                    <p class="mb-0 wow fadeInRight" data-wow-delay="300ms">Designed in Switzerland and made in Morocco,
+                        our rugs are a bridge between two
                         cultures.</p>
                 </div>
             </div>
@@ -45,7 +48,7 @@
             </div> -->
             <div class="collection-bg  position-relative">
                 <div class="collection-text position-absolute">
-                    <p class="mb-0">“Superior Material and <br />Traditional excellence”</p>
+                    <p class="mb-0 wow fadeInLeftBig">“Superior Material and <br />Traditional excellence”</p>
                 </div>
             </div>
         </div>
@@ -55,14 +58,16 @@
         <div class="container">
             <div class="row row-gap-4 align-items-center reverse">
                 <div class="col-lg-5 text-center text-lg-start">
-                    <h2 class="mb-3 mb-lg-5 about-title">Creativity runs through the veins of
+                    <h2 class="mb-3 mb-lg-5 about-title wow fadeInLeft" data-wow-delay="100ms">Creativity runs through
+                        the veins of
                         <span class="text-uppercase d-lg-block">Khalida Toukkani,</span>
                         The founder of My Moroccan Rug
                     </h2>
-                    <p>Born in Morocco and raised in Paris, and the daughter of a dress designer, Khalida was naturally
+                    <p class="wow fadeInLeft" data-wow-delay="300ms">Born in Morocco and raised in Paris, and the
+                        daughter of a dress designer, Khalida was naturally
                         destined to follow in her mother's creative footsteps</p>
                 </div>
-                <div class="col-lg-6 offset-lg-1 position-relative text-lg-start text-end">
+                <div class="col-lg-6 offset-lg-1 position-relative text-lg-start text-end wow fadeInRight">
                     <img src="./img/about/founder.jpg" alt="The Founder" class="img-fluid" />
                     <p class="about-head founder-head">The Founder</p>
                 </div>
@@ -75,7 +80,7 @@
         <div class="container">
             <div class="row mb-3">
                 <div class="col-12">
-                    <h2 class="text-center mb-lg-5 mb-3">Our Journey</h2>
+                    <h2 class="text-center mb-lg-5 mb-3 wow fadeInUp">Our Journey</h2>
                 </div>
             </div>
             <div class="row">
@@ -100,7 +105,7 @@
         <div class="container">
             <div class="row  position-relative">
                 <div class="col-12">
-                    <h2 class="text-center mb-lg-5 mb-3">Customer Testimonials</h2>
+                    <h2 class="text-center mb-lg-5 mb-3 wow fadeInUp">Customer Testimonials</h2>
                     <div class="d-none d-lg-block slick-arrows">
                         <button class="prev-arrow">
                             <img src="img/slick-arrow.png" alt="Left Arrow" />
@@ -117,8 +122,12 @@
                         <div class="slide-card text-center">
                             <p>I am overwhelmed! And really in love with my new Moroccan rug! Superb quality, individual
                                 design, top service! And it
-                                was great fun working with Khalida - not only......</p>
-                            <a href="#">Show more</a>
+                                was great fun working with Khalida - not only...... <span class="d-none">handmade touch to our bedroom,
+                                    and reminds me of my trips to Morocco whenever
+                                    I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug
+                                    in
+                                    future. 😍</span></p>
+                            <a role="button">Show more</a>
                             <h5 class="mb-0">- Claudia Schuepp</h5>
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" fill="#FFCA05"
@@ -152,10 +161,12 @@
                         <div class="slide-card text-center">
                             <p>Khalida was so helpful, answered any questions I had and extremely accommodating. The
                                 dimensions and colour shown are accurate, and the whool is sooo soft. It adds a
-                                beautiful, handmade touch to our bedroom, and reminds me of my trips to Morocco whenever
-                                I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug in
-                                future. 😍</p>
-                            <a href="#">Show less</a>
+                                beautiful, <span class="">handmade touch to our bedroom, and reminds me of my trips to Morocco
+                                    whenever
+                                    I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug
+                                    in
+                                    future. 😍</span></p>
+                            <a role="button">Show less</a>
                             <h5 class="mb-0">- Laurene Robert</h5>
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" fill="#FFCA05"
@@ -189,8 +200,12 @@
                         <div class="slide-card text-center">
                             <p>I recently purchased a beautiful rug from My Moroccan Rug ! The quality of the rug is
                                 exceptional - it's soft, durable,
-                                and adds the perfect touch of warmth.........</p>
-                            <a href="#">Show more</a>
+                                and adds the perfect touch of warmth......... <span class="d-none">handmade touch to our bedroom, and
+                                    reminds me of my trips to Morocco whenever
+                                    I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug
+                                    in
+                                    future. 😍</span></p>
+                            <a role="button">Show more</a>
                             <h5 class="mb-0">- Celine Soyer</h5>
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" fill="#FFCA05"
@@ -224,10 +239,12 @@
                         <div class="slide-card text-center">
                             <p>Khalida was so helpful, answered any questions I had and extremely accommodating. The
                                 dimensions and colour shown are accurate, and the whool is sooo soft. It adds a
-                                beautiful, handmade touch to our bedroom, and reminds me of my trips to Morocco whenever
-                                I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug in
-                                future. 😍</p>
-                            <a href="#">Show less</a>
+                                beautiful, <span class="">handmade touch to our bedroom, and reminds me of my trips to Morocco
+                                    whenever
+                                    I look at it. I will definitely purchase more rugs for our home from My Moroccan Rug
+                                    in
+                                    future. 😍</span></p>
+                            <a role="button">Show less</a>
                             <h5 class="mb-0">- Laurene Robert</h5>
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" fill="#FFCA05"
@@ -269,21 +286,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-center mb-lg-5 mb-3">Follow us on Instagram</h2>
+                    <h2 class="text-center mb-lg-5 mb-3 wow fadeInUp">Follow us on Instagram</h2>
                 </div>
             </div>
             <div class="row row-gap-4 justify-content-center">
                 <div class="col-lg-4 col-6">
-                    <img src="img/insta-1.jpg" alt="" class="img-fluid w-100" />
+                    <img src="img/insta-1.jpg" alt="" class="img-fluid w-100 wow fadeInLeft" />
                 </div>
                 <div class="col-lg-4 col-6">
-                    <img src="img/insta-2.jpg" alt="" class="img-fluid w-100" />
+                    <img src="img/insta-2.jpg" alt="" class="img-fluid w-100 wow fadeInUp" />
                 </div>
                 <div class="col-lg-4 col-6">
-                    <img src="img/insta-3.jpg" alt="" class="img-fluid w-100" />
+                    <img src="img/insta-3.jpg" alt="" class="img-fluid w-100 wow fadeInRight" />
                 </div>
                 <div class="col-12 text-center">
-                    <a href="#" class="btn btn-outline-secondary">See more on Instagram</a>
+                    <a href="#" class="btn btn-outline-secondary wow fadeInUpBig">See more on Instagram</a>
                 </div>
             </div>
         </div>
@@ -294,15 +311,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-center mb-md-4">Contact</h2>
+                    <h2 class="text-center mb-md-4 wow fadeInUp">Contact</h2>
                 </div>
             </div>
             <div class="d-line"></div>
             <div class="row align-items-center pt-lg-5 mob-line">
                 <div class="col-md-6">
                     <div class="contact-wrapper first">
-                        <h3>Khalida Toukkani<br />Founder and Creative Director</h3>
-                        <div class="d-flex flex-wrap gap-3">
+                        <h3 class="wow fadeInLeft" data-wow-delay="100ms">Khalida Toukkani<br />Founder and Creative
+                            Director</h3>
+                        <div class="d-flex flex-wrap gap-3 wow fadeInLeft" data-wow-delay="300ms">
                             <p>E-mail<br />
                                 <a href="mailto:info@my-moroccan-rug.com">info@my-moroccan-rug.com</a>
                             </p>
@@ -312,8 +330,8 @@
                         </div>
                     </div>
                     <div class="contact-wrapper">
-                        <h3>Khadija Keddou<br />Marketing Director</h3>
-                        <div class="d-flex flex-wrap gap-3">
+                        <h3 class="wow fadeInLeft" data-wow-delay="100ms">Khadija Keddou<br />Marketing Director</h3>
+                        <div class="d-flex flex-wrap gap-3 wow fadeInLeft" data-wow-delay="300ms">
                             <p>E-mail<br />
                                 <a href="mailto:keddou@my-moroccan-rug.com">keddou@my-moroccan-rug.com</a>
                             </p>
@@ -325,12 +343,14 @@
                 </div>
                 <div class="col-md-6 text-center">
                     <div class="get-in-touch-wrapper first">
-                        <h2>Get in touch</h2>
-                        <a href="#" class="btn btn-outline-secondary">Send us an email</a>
+                        <h2 class="wow fadeInRight" data-wow-delay="100ms">Get in touch</h2>
+                        <a href="#" class="btn btn-outline-secondary wow fadeInRight" data-wow-delay="300ms">Send us an
+                            email</a>
                     </div>
                     <div class="get-in-touch-wrapper">
-                        <h2>Showroom</h2>
-                        <p class="mb-0">Hinterbergstrasse 32 6330, <span class="d-md-block">Steinhausen Zoug,
+                        <h2 class="wow fadeInRight" data-wow-delay="600ms">Showroom</h2>
+                        <p class="mb-0 wow fadeInRight" data-wow-delay="900ms">Hinterbergstrasse 32 6330, <span
+                                class="d-md-block">Steinhausen Zoug,
                                 Switzerland</span></p>
                     </div>
                 </div>
@@ -342,6 +362,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/aos.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/smoothscroll.min.js"></script>
     <script src="js/slick.min.js"></script>
