--- a/collection-inner.html
+++ b/collection-inner.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/slick-theme.min.css">
     <link rel="stylesheet" href="css/slick.min.css">
     <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css?v=1.2">
     <link rel="stylesheet" href="css/responsive.css?v=1.2">
 </head>
@@ -21,7 +22,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <ul class="nav nav-pills justify-content-center mb-5" id="pills-tab" role="tablist">
+                    <ul class="nav nav-pills justify-content-center mb-5 wow fadeInUp" id="pills-tab" role="tablist">
                         <li class="nav-item" role="presentation">
                             <button class="nav-link active" id="pills-rug-tab" data-bs-toggle="pill"
                                 data-bs-target="#pills-rug" type="button" role="tab" aria-controls="pills-rug"
@@ -46,14 +47,14 @@
                     <div class="tab-content" id="pills-tabContent">
                         <div class="tab-pane fade show active" id="pills-rug" role="tabpanel"
                             aria-labelledby="pills-home-tab" tabindex="0">
-                            <div class="row">
-                                <div class="col-lg-4">
+                            <div class="row gy-4">
+                                <div class="col-lg-4 wow fadeInLeft">
                                     <a href="./product-detail.html" class="text-center ">
                                         <img src="./img/product-1.jpg" alt="" class="img-fluid" />
                                         <h4 class="mt-4">Beeda oval rug</h4>
                                     </a>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-4 wow fadeInUp">
                                     <a href="./product-detail.html" class="text-center ">
                                         <img src="./img/product-2.jpg" alt="" class="img-fluid" />
                                         <h4 class="mt-4">California Rug</h4>
@@ -62,13 +63,91 @@
                             </div>
                         </div>
                         <div class="tab-pane fade" id="pills-head-boards" role="tabpanel"
-                            aria-labelledby="pills-head-boards-tab" tabindex="0">...
+                            aria-labelledby="pills-head-boards-tab" tabindex="0">
+                            <div class="row gy-4">
+                                <div class="col-lg-4 wow fadeInLeft">
+                                    <a href="./product-detail.html" class="text-center ">
+                                        <img src="./img/product/wooden1.jpg" alt="" class="img-fluid" />
+                                        <h4 class="mt-4">Wooden structure</h4>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 wow fadeInUp">
+                                    <a href="./product-detail.html" class="text-center ">
+                                        <img src="./img/product/wooden2.jpg" alt="" class="img-fluid" />
+                                        <h4 class="mt-4">Wooden structure</h4>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                         <div class="tab-pane fade" id="pills-artwall" role="tabpanel"
-                            aria-labelledby="pills-artwall-tab" tabindex="0">...
+                            aria-labelledby="pills-artwall-tab" tabindex="0">
+                            <div class="row gy-4">
+                                <div class="col-lg-4 wow fadeInLeft">
+                                    <a href="./product-detail.html" class="text-center ">
+                                        <img src="./img/product/artwall1.jpg" alt="" class="img-fluid" />
+                                        <h4 class="mt-4">OG-Green</h4>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 wow fadeInUp">
+                                    <a href="./product-detail.html" class="text-center ">
+                                        <img src="./img/product/artwall2.jpg" alt="" class="img-fluid" />
+                                        <h4 class="mt-4">G-Black</h4>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 wow fadeInRight">
+                                    <a href="./product-detail.html" class="text-center ">
+                                        <img src="./img/product/artwall3.jpg" alt="" class="img-fluid" />
+                                        <h4 class="mt-4">O-Red</h4>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 wow fadeInLeft">
+                                    <a href="./product-detail.html" class="text-center ">
+                                        <img src="./img/product/artwall4.jpg" alt="" class="img-fluid" />
+                                        <h4 class="mt-4">G-Green</h4>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 wow fadeInUp">
+                                    <a href="./product-detail.html" class="text-center ">
+                                        <img src="./img/product/artwall5.jpg" alt="" class="img-fluid" />
+                                        <h4 class="mt-4">G-Orange</h4>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 wow fadeInRight">
+                                    <a href="./product-detail.html" class="text-center ">
+                                        <img src="./img/product/artwall6.jpg" alt="" class="img-fluid" />
+                                        <h4 class="mt-4">P-White</h4>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 wow fadeInLeft">
+                                    <a href="./product-detail.html" class="text-center ">
+                                        <img src="./img/product/artwall7.jpg" alt="" class="img-fluid" />
+                                        <h4 class="mt-4">P-Blue</h4>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 wow fadeInUp">
+                                    <a href="./product-detail.html" class="text-center ">
+                                        <img src="./img/product/artwall8.jpg" alt="" class="img-fluid" />
+                                        <h4 class="mt-4">P-Red</h4>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="tab-pane fade" id="pills-Pouf" role="tabpanel" aria-labelledby="pills-Pouf-tab"
-                            tabindex="0">...
+                        <div class="tab-pane fade" id="pills-pouf" role="tabpanel" aria-labelledby="pills-pouf-tab"
+                            tabindex="0">
+                            <div class="row gy-4">
+                                <div class="col-lg-4 wow fadeInLeft">
+                                    <a href="./product-detail.html" class="text-center ">
+                                        <img src="./img/product/pauf1.jpg" alt="" class="img-fluid" />
+                                        <h4 class="mt-4">Woolen Pouf</h4>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 wow fadeInUp">
+                                    <a href="./product-detail.html" class="text-center ">
+                                        <img src="./img/product/pauf2.jpg" alt="" class="img-fluid" />
+                                        <h4 class="mt-4">Woolen Pouf</h4>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -81,40 +160,41 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-center mb-lg-5 mb-3">Follow us on Instagram</h2>
+                    <h2 class="text-center mb-lg-5 mb-3 wow fadeInUp">Follow us on Instagram</h2>
                 </div>
             </div>
             <div class="row row-gap-4 justify-content-center">
                 <div class="col-lg-4 col-6">
-                    <img src="img/insta-1.jpg" alt="" class="img-fluid w-100" />
+                    <img src="img/insta-1.jpg" alt="" class="img-fluid w-100 wow fadeInLeft" />
                 </div>
                 <div class="col-lg-4 col-6">
-                    <img src="img/insta-2.jpg" alt="" class="img-fluid w-100" />
+                    <img src="img/insta-2.jpg" alt="" class="img-fluid w-100 wow fadeInUp" />
                 </div>
                 <div class="col-lg-4 col-6">
-                    <img src="img/insta-3.jpg" alt="" class="img-fluid w-100" />
+                    <img src="img/insta-3.jpg" alt="" class="img-fluid w-100 wow fadeInRight" />
                 </div>
                 <div class="col-12 text-center">
-                    <a href="#" class="btn btn-outline-secondary">See more on Instagram</a>
+                    <a href="#" class="btn btn-outline-secondary wow fadeInUpBig">See more on Instagram</a>
                 </div>
             </div>
         </div>
     </section>
 
 
-    <section class="contact-sec">
+    <section class="contact-sec font-opt">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-center mb-md-4">Contact</h2>
+                    <h2 class="text-center mb-md-4 wow fadeInUp">Contact</h2>
                 </div>
             </div>
             <div class="d-line"></div>
             <div class="row align-items-center pt-lg-5 mob-line">
                 <div class="col-md-6">
                     <div class="contact-wrapper first">
-                        <h3>Khalida Toukkani<br />Founder and Creative Director</h3>
-                        <div class="d-flex flex-wrap gap-3">
+                        <h3 class="wow fadeInLeft" data-wow-delay="100ms">Khalida Toukkani<br />Founder and Creative
+                            Director</h3>
+                        <div class="d-flex flex-wrap gap-3 wow fadeInLeft" data-wow-delay="300ms">
                             <p>E-mail<br />
                                 <a href="mailto:info@my-moroccan-rug.com">info@my-moroccan-rug.com</a>
                             </p>
@@ -124,8 +204,8 @@
                         </div>
                     </div>
                     <div class="contact-wrapper">
-                        <h3>Khadija Keddou<br />Marketing Director</h3>
-                        <div class="d-flex flex-wrap gap-3">
+                        <h3 class="wow fadeInLeft" data-wow-delay="100ms">Khadija Keddou<br />Marketing Director</h3>
+                        <div class="d-flex flex-wrap gap-3 wow fadeInLeft" data-wow-delay="300ms">
                             <p>E-mail<br />
                                 <a href="mailto:keddou@my-moroccan-rug.com">keddou@my-moroccan-rug.com</a>
                             </p>
@@ -137,12 +217,14 @@
                 </div>
                 <div class="col-md-6 text-center">
                     <div class="get-in-touch-wrapper first">
-                        <h2>Get in touch</h2>
-                        <a href="#" class="btn btn-outline-secondary">Send us an email</a>
+                        <h2 class="wow fadeInRight" data-wow-delay="100ms">Get in touch</h2>
+                        <a href="#" class="btn btn-outline-secondary wow fadeInRight" data-wow-delay="300ms">Send us an
+                            email</a>
                     </div>
                     <div class="get-in-touch-wrapper">
-                        <h2>Showroom</h2>
-                        <p class="mb-0">Hinterbergstrasse 32 6330, <span class="d-md-block">Steinhausen Zoug,
+                        <h2 class="wow fadeInRight" data-wow-delay="600ms">Showroom</h2>
+                        <p class="mb-0 wow fadeInRight" data-wow-delay="900ms">Hinterbergstrasse 32 6330, <span
+                                class="d-md-block">Steinhausen Zoug,
                                 Switzerland</span></p>
                     </div>
                 </div>
@@ -154,6 +236,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/aos.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/smoothscroll.min.js"></script>
     <script src="js/slick.min.js"></script>
