--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/slick-theme.min.css">
     <link rel="stylesheet" href="css/slick.min.css">
     <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css?v=1.2">
     <link rel="stylesheet" href="css/responsive.css?v=1.2">
 </head>
@@ -19,7 +20,7 @@
 
     <section class="hero-section py-0">
         <div class="hero-title">
-            <h1 data-aos="zoom-in">New horizons for weaving</h1>
+            <h1 class="wow zoomInDown">New horizons for weaving</h1>
         </div>
     </section>
 
@@ -27,13 +28,14 @@
         <div class="container-fluid px-0">
             <div class="row ">
                 <div class="col-12">
-                    <h2 class="text-center mb-lg-5 mb-3">Collection</h2>
+                    <h2 class="text-center mb-lg-5 mb-3 wow fadeInUp">Collection</h2>
                 </div>
             </div>
             <div class="collection-bg position-relative">
                 <div class="collection-text position-absolute">
-                    <p class="mb-4">“Lorem ipsum dolor sit <br />consectetur adipiscing”</p>
-                    <div class="text-start text-lg-end">
+                    <p class="mb-4 wow fadeInLeft" data-wow-delay="100ms">“Lorem ipsum dolor sit <br />consectetur
+                        adipiscing”</p>
+                    <div class="text-start text-lg-end wow fadeInLeft" data-wow-delay="300ms">
                         <a href="#" class="btn btn-outline-primary">Know More</a>
                     </div>
                 </div>
@@ -44,18 +46,19 @@
     <section class="about-sec">
         <div class="container">
             <div class="row row-gap-4 align-items-center">
-                <div class="col-lg-6 position-relative">
+                <div class="col-lg-6 position-relative wow fadeInLeft">
                     <img src="./img/about-sec.jpg" alt="About us" class="img-fluid" />
                     <p class="about-head">About us</p>
                 </div>
                 <div class="col-lg-5 offset-lg-1 text-center text-lg-start">
-                    <h2 class="mb-3 mb-lg-5 about-title">Creativity runs through <span class="d-block">the veins
+                    <h2 class="mb-3 mb-lg-5 about-title wow fadeInRight" data-wow-delay="100ms">Creativity runs through
+                        <span class="d-block">the veins
                             of</span>
                         <span class="d-block text-uppercase">khalida toukkani,</span>
                         the founder of
                         My Moroccan Rug.
                     </h2>
-                    <a href="#" class="btn btn-outline-secondary">Know More</a>
+                    <a href="#" class="btn btn-outline-secondary wow fadeInRight" data-wow-delay="300ms">Know More</a>
                 </div>
             </div>
         </div>
@@ -66,7 +69,7 @@
         <div class="container-fluid px-0">
             <div class="row ">
                 <div class="col-12">
-                    <h2 class="text-center mb-lg-5 mb-3">Our Best Selling Products</h2>
+                    <h2 class="text-center mb-lg-5 mb-3 wow fadeInUp">Our Best Selling Products</h2>
                 </div>
             </div>
             <div class="row">
@@ -117,13 +120,13 @@
         <div class="container">
             <div class="row mb-3">
                 <div class="col-12">
-                    <h2 class="text-center mb-lg-5 mb-3">As seen in</h2>
+                    <h2 class="text-center mb-lg-5 mb-3 wow fadeInUp">As seen in</h2>
                 </div>
                 <div class="col-lg-9 mx-auto text-center">
-                    <div class="d-flex justify-content-between brand-logos mb-5">
-                        <img src="img/wohnervue-logo.jpg" alt="" class="img-fluid" />
-                        <img src="img/decor-logo.jpg" alt="" class="img-fluid" />
-                        <img src="img/goout-logo.jpg" alt="" class="img-fluid" />
+                    <div class="d-flex justify-content-center gap-5 brand-logos mb-5">
+                        <img src="img/wohnervue-logo.jpg" alt="" class="img-fluid wow fadeInLeft" />
+                        <img src="img/goout-logo.jpg" alt="" class="img-fluid wow fadeInUp" />
+                        <img src="img/decor-logo.png" alt="" class="img-fluid wow fadeInRight" />
                     </div>
                 </div>
             </div>
@@ -148,21 +151,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-center mb-lg-5 mb-3">Follow us on Instagram</h2>
+                    <h2 class="text-center mb-lg-5 mb-3 wow fadeInUp">Follow us on Instagram</h2>
                 </div>
             </div>
             <div class="row row-gap-4 justify-content-center">
                 <div class="col-lg-4 col-6">
-                    <img src="img/insta-1.jpg" alt="" class="img-fluid w-100" />
+                    <img src="img/insta-1.jpg" alt="" class="img-fluid w-100 wow fadeInLeft" />
                 </div>
                 <div class="col-lg-4 col-6">
-                    <img src="img/insta-2.jpg" alt="" class="img-fluid w-100" />
+                    <img src="img/insta-2.jpg" alt="" class="img-fluid w-100 wow fadeInUp" />
                 </div>
                 <div class="col-lg-4 col-6">
-                    <img src="img/insta-3.jpg" alt="" class="img-fluid w-100" />
+                    <img src="img/insta-3.jpg" alt="" class="img-fluid w-100 wow fadeInRight" />
                 </div>
                 <div class="col-12 text-center">
-                    <a href="#" class="btn btn-outline-secondary">See more on Instagram</a>
+                    <a href="#" class="btn btn-outline-secondary wow fadeInUpBig">See more on Instagram</a>
                 </div>
             </div>
         </div>
@@ -173,15 +176,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-center mb-md-4">Contact</h2>
+                    <h2 class="text-center mb-md-4 wow fadeInUp">Contact</h2>
                 </div>
             </div>
             <div class="d-line"></div>
             <div class="row align-items-center pt-lg-5 mob-line">
                 <div class="col-md-6">
                     <div class="contact-wrapper first">
-                        <h3>Khalida Toukkani<br />Founder and Creative Director</h3>
-                        <div class="d-flex flex-wrap gap-3">
+                        <h3 class="wow fadeInLeft" data-wow-delay="100ms">Khalida Toukkani<br />Founder and Creative
+                            Director</h3>
+                        <div class="d-flex flex-wrap gap-3 wow fadeInLeft" data-wow-delay="300ms">
                             <p>E-mail<br />
                                 <a href="mailto:info@my-moroccan-rug.com">info@my-moroccan-rug.com</a>
                             </p>
@@ -191,8 +195,8 @@
                         </div>
                     </div>
                     <div class="contact-wrapper">
-                        <h3>Khadija Keddou<br />Marketing Director</h3>
-                        <div class="d-flex flex-wrap gap-3">
+                        <h3 class="wow fadeInLeft" data-wow-delay="100ms">Khadija Keddou<br />Marketing Director</h3>
+                        <div class="d-flex flex-wrap gap-3 wow fadeInLeft" data-wow-delay="300ms">
                             <p>E-mail<br />
                                 <a href="mailto:keddou@my-moroccan-rug.com">keddou@my-moroccan-rug.com</a>
                             </p>
@@ -204,12 +208,14 @@
                 </div>
                 <div class="col-md-6 text-center">
                     <div class="get-in-touch-wrapper first">
-                        <h2>Get in touch</h2>
-                        <a href="#" class="btn btn-outline-secondary">Send us an email</a>
+                        <h2 class="wow fadeInRight" data-wow-delay="100ms">Get in touch</h2>
+                        <a href="#" class="btn btn-outline-secondary wow fadeInRight" data-wow-delay="300ms">Send us an
+                            email</a>
                     </div>
                     <div class="get-in-touch-wrapper">
-                        <h2>Showroom</h2>
-                        <p class="mb-0">Hinterbergstrasse 32 6330, <span class="d-md-block">Steinhausen Zoug,
+                        <h2 class="wow fadeInRight" data-wow-delay="600ms">Showroom</h2>
+                        <p class="mb-0 wow fadeInRight" data-wow-delay="900ms">Hinterbergstrasse 32 6330, <span
+                                class="d-md-block">Steinhausen Zoug,
                                 Switzerland</span></p>
                     </div>
                 </div>
@@ -221,6 +227,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/aos.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/smoothscroll.min.js"></script>
     <script src="js/slick.min.js"></script>
