--- a/product-detail.html
+++ b/product-detail.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/slick-theme.min.css">
     <link rel="stylesheet" href="css/slick.min.css">
     <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css?v=1.2">
     <link rel="stylesheet" href="css/responsive.css?v=1.2">
 </head>
@@ -23,9 +24,9 @@
                 <div class="col-12 mb-4">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#">Collection</a></li>
-                            <li class="breadcrumb-item"><a href="#">Artwall</a></li>
+                            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                            <li class="breadcrumb-item"><a href="./collection.html">Collection</a></li>
+                            <li class="breadcrumb-item"><a href="./collection-inner.html">Artwall</a></li>
                             <li class="breadcrumb-item active" aria-current="page">OG-Green</li>
                         </ol>
                     </nav>
@@ -56,7 +57,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-6 prod-desc">
+                <div class="col-lg-6 ps-lg-5 prod-desc">
                     <div class="mb-lg-5 mb-3">
                         <h3>OG-Green</h3>
                         <p>A textured structure in a deep kaki color</p>
@@ -170,6 +171,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/aos.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/smoothscroll.min.js"></script>
     <script src="js/slick.min.js"></script>
