--- a/collection.html
+++ b/collection.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/slick-theme.min.css">
     <link rel="stylesheet" href="css/slick.min.css">
     <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css?v=1.2">
     <link rel="stylesheet" href="css/responsive.css?v=1.2">
 </head>
@@ -21,8 +22,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 mx-auto text-center ">
-                    <h1>The balance between the best design, the technical challenge and the ancestral method.</h1>
-                    <p><span class="d-lg-block">I decided to take up the challenge of taking the art of weaving to new
+                    <h1 class="wow fadeInUp" data-wow-delay="100ms">The balance between the best design, the technical
+                        challenge and the ancestral method.</h1>
+                    <p class="wow fadeInUp" data-wow-delay="300ms"><span class="d-lg-block">I decided to take up the
+                            challenge of taking the art of weaving to new
                             horizons.</span>
                         Create technically innovative pieces of crazy dimensions, playing with weaving structures, and
                         even creating objects
@@ -32,31 +35,31 @@
             <div class="row mt-lg-5 mt-3 collect-tag">
                 <div class="col-lg-8 mx-auto">
                     <div class="row row-gap-5">
-                        <div class="col-lg-6">
-                            <a href="./collection-inner.html" class="text-center ">
+                        <div class="col-lg-6 wow fadeInLeft">
+                            <a href="./collection-inner.html" class="text-center">
                                 <h4 class="mb-4">Rugs</h4>
                                 <img src="./img/product-1.jpg" alt="" class="img-fluid" />
                             </a>
                         </div>
-                        <div class="col-lg-6">
-                            <a href="./collection-inner.html" class="text-center ">
+                        <div class="col-lg-6 wow fadeInRight">
+                            <a href="./collection-inner.html" class="text-center">
                                 <h4 class="mb-4">Head Boards</h4>
                                 <img src="./img/product-2.jpg" alt="" class="img-fluid" />
                             </a>
                         </div>
-                        <div class="col-lg-6">
-                            <a href="./collection-inner.html" class="text-center ">
+                        <div class="col-lg-6 wow fadeInLeft" data-wow-delay="300ms">
+                            <a href="./collection-inner.html" class="text-center">
                                 <h4 class="mb-4">Art wall</h4>
                                 <img src="./img/product-3.jpg" alt="" class="img-fluid" />
                             </a>
                         </div>
-                        <div class="col-lg-6">
-                            <a href="./collection-inner.html" class="text-center ">
+                        <div class="col-lg-6 wow fadeInRight" data-wow-delay="300ms">
+                            <a href="./collection-inner.html" class="text-center">
                                 <h4 class="mb-4">Pouf</h4>
                                 <img src="./img/product-2.jpg" alt="" class="img-fluid" />
                             </a>
                         </div>
-                        <div class="col-12 text-center">
+                        <div class="col-12 text-center wow fadeInUpBig">
                             <p>Our creations are designed according to Swiss standards, and handmade in Morocco to find
                                 their place in interior
                                 projects all over the world.</p>
@@ -72,40 +75,41 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-center mb-lg-5 mb-3">Follow us on Instagram</h2>
+                    <h2 class="text-center mb-lg-5 mb-3 wow fadeInUp">Follow us on Instagram</h2>
                 </div>
             </div>
             <div class="row row-gap-4 justify-content-center">
                 <div class="col-lg-4 col-6">
-                    <img src="img/insta-1.jpg" alt="" class="img-fluid w-100" />
+                    <img src="img/insta-1.jpg" alt="" class="img-fluid w-100 wow fadeInLeft" />
                 </div>
                 <div class="col-lg-4 col-6">
-                    <img src="img/insta-2.jpg" alt="" class="img-fluid w-100" />
+                    <img src="img/insta-2.jpg" alt="" class="img-fluid w-100 wow fadeInUp" />
                 </div>
                 <div class="col-lg-4 col-6">
-                    <img src="img/insta-3.jpg" alt="" class="img-fluid w-100" />
+                    <img src="img/insta-3.jpg" alt="" class="img-fluid w-100 wow fadeInRight" />
                 </div>
                 <div class="col-12 text-center">
-                    <a href="#" class="btn btn-outline-secondary">See more on Instagram</a>
+                    <a href="#" class="btn btn-outline-secondary wow fadeInUpBig">See more on Instagram</a>
                 </div>
             </div>
         </div>
     </section>
 
 
-    <section class="contact-sec">
+    <section class="contact-sec font-opt">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-center mb-md-4">Contact</h2>
+                    <h2 class="text-center mb-md-4 wow fadeInUp">Contact</h2>
                 </div>
             </div>
             <div class="d-line"></div>
             <div class="row align-items-center pt-lg-5 mob-line">
                 <div class="col-md-6">
                     <div class="contact-wrapper first">
-                        <h3>Khalida Toukkani<br />Founder and Creative Director</h3>
-                        <div class="d-flex flex-wrap gap-3">
+                        <h3 class="wow fadeInLeft" data-wow-delay="100ms">Khalida Toukkani<br />Founder and Creative
+                            Director</h3>
+                        <div class="d-flex flex-wrap gap-3 wow fadeInLeft" data-wow-delay="300ms">
                             <p>E-mail<br />
                                 <a href="mailto:info@my-moroccan-rug.com">info@my-moroccan-rug.com</a>
                             </p>
@@ -115,8 +119,8 @@
                         </div>
                     </div>
                     <div class="contact-wrapper">
-                        <h3>Khadija Keddou<br />Marketing Director</h3>
-                        <div class="d-flex flex-wrap gap-3">
+                        <h3 class="wow fadeInLeft" data-wow-delay="100ms">Khadija Keddou<br />Marketing Director</h3>
+                        <div class="d-flex flex-wrap gap-3 wow fadeInLeft" data-wow-delay="300ms">
                             <p>E-mail<br />
                                 <a href="mailto:keddou@my-moroccan-rug.com">keddou@my-moroccan-rug.com</a>
                             </p>
@@ -128,12 +132,14 @@
                 </div>
                 <div class="col-md-6 text-center">
                     <div class="get-in-touch-wrapper first">
-                        <h2>Get in touch</h2>
-                        <a href="#" class="btn btn-outline-secondary">Send us an email</a>
+                        <h2 class="wow fadeInRight" data-wow-delay="100ms">Get in touch</h2>
+                        <a href="#" class="btn btn-outline-secondary wow fadeInRight" data-wow-delay="300ms">Send us an
+                            email</a>
                     </div>
                     <div class="get-in-touch-wrapper">
-                        <h2>Showroom</h2>
-                        <p class="mb-0">Hinterbergstrasse 32 6330, <span class="d-md-block">Steinhausen Zoug,
+                        <h2 class="wow fadeInRight" data-wow-delay="600ms">Showroom</h2>
+                        <p class="mb-0 wow fadeInRight" data-wow-delay="900ms">Hinterbergstrasse 32 6330, <span
+                                class="d-md-block">Steinhausen Zoug,
                                 Switzerland</span></p>
                     </div>
                 </div>
@@ -145,6 +151,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/aos.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/smoothscroll.min.js"></script>
     <script src="js/slick.min.js"></script>
